# rnd-jg-test3

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  CPPLINT.cfg  README.md  workspace.code-workspace
cmake/: add-external-project-libs.cmake  add-harvest-project.cmake  add-project-libs.cmake  arm64-android24-toolchain.cmake  arm64-gcc-toolchain.cmake  build-type.cmake  cross-compile.cmake  cxx-properties.cmake  determine-locations.cmake  fetch-gtest.cmake  hiroot.cmake  linter.cmake  project-cpack.cmake  project-properties.cmake  rnd-jg-test3Config.cmake.template  static-library-bundle.cmake  super-build.cmake
install/: install.sh
install/include/: Proj3Interface.hpp
project/: CMakeLists.txt
project/include/internal/: Proj3InternalHidden.hpp
project/log/: example.txt
project/src/libproj3/: CMakeLists.txt  Proj3Interface.cpp  Proj3InternalHidden.cpp
scripts/x86_64/: example.sh
test/: .clang-tidy  CMakeLists.txt  Proj1Interface.test.cpp  Test.cpp
